3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Apply qal21's patch [ #1205421 ]: Implement new Python functions:
GetArchType, GetFacing, GetLevel.
plugin/plugin_python.c, plugin/include/plugin_python.h: Add new functions.
doc/Developers/python: Describe new functions.
Andreas Kirschbaum 2005-05-20

server/monster.c: Fix monsters to cast spells from spellbooks.
Andreas Kirschbaum 2005-05-15

Fixed compilation issue.
server/apply.c: can't declare a variable after some function call.
socket/info.c: removed unused variable.
Ryo 2005/05/07

Corrected code to compile under -ansi gcc flag:
 * correction of some non posix compatible calls around scandir 
 * changing configure to detect the absence of 'alphasort' prototype
 * converted some '//' comment to /**/ one
 * reran automake1.8/autoconf2.50/autheader2.50
Note even it it compiles with -ansi -pedantic, it still need cleanup to
get 64 bits experience code working!
Tchize 2005/05/07

Applied Casper1's patch [ #1193516 ] for Hurd support.
 * socket/lowlevel.c: #ifdef some code part that won't work.
Change some char* to const char*, when values shouldn't be changed. Changed files:
 * include/libproto.h
 * common/arch.c
 * common/living.c
Ryo 2005-05-03

Change some char* to const char*, when values shouldn't be changed. Changed files:
 * include/sproto.h
 * socket/info.c
 * socket/item.c
Ryo 2005-04-30

Change some char* to const char*, when values shouldn't be changed. Changed files:
 * include/sproto.h
 * server/apply.c
 * server/ban.c
 * server/spell_util.c
Ryo 2005-04-27

server/skills.c: Change it so that jeweler skill is used to identify
   amulets, not alchemy skill.
MSW 2005-04-27
